  - viewer - shortcuts can be in arrays
  - viewer - shortcut wildcard support (issue #1554)
  - viewer - didn't decrypt pcap for large packets correctly (issue #1756)
  - viewer - support wiseURL for wise.js viewer plugin (issue #1758)
  - viewer - display "0" values
  - viewer - Test alert includes who requested it
  - viewer - fixed regex and floats not always working in array expressions
  - multies - support elasticsearchApiKey
  - multies - support scrolling and large queries/pagination
  - wise - handle empty config file on startup
  - wise - support ./ with value-actions
  - wise - support usersElasticsearchAPIKey
  - esproxy - elasticsearchAPIKey and elasticsearchBasicAuth support

3.0.0 2021/08/18
  - BREAKING - elasticsearch - ES 7.10.0 or later required
  - BREAKING - if not using a ES prefix, the prefix arkime_ will now be used
  - BREAKING - multies - multiESNodes requires a name: and prefix: attribute per entry
  - BREAKING - wise - custom sources will need to be modified
  - BREAKING - wise - redis urls have a new standard format
  - BREAKING - wise - for json data keyColumn has been renamed keyPath
  - BREAKING - wise - now lower case lotermfield and upper case uptermfield fields
  - BREAKING - capture - override-ips will no longer have leading 0s for ASN
  - release - curl 7.78.0, node 14.17.5, glib 2.68.3, yara 4.0.2, lua 5.3.6, maxmind 1.4.3, nghttp2 1.44.0
  - capture - search for GeoIP files first in /var/lib/GeoIP
  - capture - fixed possible ABR with time parsing
  - capture - fixed memory leak with dns bad hostname parsing
  - capture - new classifier for nfs and several rpc protocols
  - capture - handle larger oracle connect msgs better
  - capture - parse small http basic auth headers correctly
  - capture - rule matches can now be logged
  - capture - new localPcapIndex setting to enable pcap index on capture node instead of ES
  - capture - write long open tcp sessions every tcpSaveTimeout even if no syn