@@ -17,15 +17,18 @@
           </span>
         </span>
       </span>
-      <input type="text"
+      <input
+        type="text"
         tabindex="1"
+        id="expression"
+        ref="expression"
+        placeholder="Search"
         v-model="expression"
         v-caret-pos="caretPos"
         v-focus-input="focusInput"
-        placeholder="Search"
         @input="debounceExprChange"
-        @keyup.enter="enterClick"
-        @keyup.esc.tab.enter.down.up.stop="keyup($event)"
+        @keydown.enter.prevent.stop="enterClick"
+        @keydown.esc.tab.enter.down.up.prevent.stop="keyup($event)"
         class="form-control search-control"
       />
       <span class="input-group-append"
@@ -244,7 +247,8 @@ export default {
       let str = val;
       if (val.exp) { str = val.exp; }
 
-      this.expression = this.rebuildQuery(this.expression, str);
+      const { expression, replacing } = this.rebuildQuery(this.expression, str);
+      this.expression = expression;
 
       if (this.lastTokenWasField) { // add field to history
         this.addFieldToHistory(val);
@@ -252,12 +256,16 @@ export default {
 
       this.results = null;
       this.fieldHistoryResults = [];
-      this.focusInput = true; // re-focus on input
       this.activeIdx = -1;
 
-      setTimeout(() => { // unfocus input for further re-focusing
-        this.focusInput = false;
-      }, 1000);
+      this.$nextTick(() => {
+        const expressionInput = document.getElementById('expression');
+        if (replacing) {
+          const newCaretPos = this.caretPos + 1 + (str.length - replacing.length);
+          expressionInput.setSelectionRange(newCaretPos, newCaretPos);
+        }
+        expressionInput.focus();
+      });
     },
     /* Fired when the search input is changed */
     debounceExprChange: function () {
@@ -317,8 +325,6 @@ export default {
 
       // check for tab click when results are visible
       if (this.results && this.results.length && e.keyCode === 9) {
-        e.preventDefault();
-
         // if there is no item in the results is selected, use the first one
         if (this.activeIdx < 0) { this.activeIdx = 0; }
 
@@ -355,7 +361,6 @@ export default {
 
       switch (e.keyCode) {
       case 40: // down arrow
-        e.preventDefault();
         this.activeIdx = (this.activeIdx + 1) % (this.fieldHistoryResults.length + this.results.length);
         target = this.resultsElement.querySelectorAll('a')[this.activeIdx];
         if (target && target.parentNode) {
@@ -363,7 +368,6 @@ export default {
         }
         break;
       case 38: // up arrow
-        e.preventDefault();
         this.activeIdx = (this.activeIdx > 0 ? this.activeIdx : (this.fieldHistoryResults.length + this.results.length)) - 1;
         target = this.resultsElement.querySelectorAll('a')[this.activeIdx];
         if (target && target.parentNode) {
@@ -372,14 +376,18 @@ export default {
         break;
       case 13: // enter
         if (this.activeIdx >= 0) {
-          e.preventDefault();
           let result;
           if (this.activeIdx < this.fieldHistoryResults.length) {
             result = this.fieldHistoryResults[this.activeIdx];
           } else {
             result = this.results[this.activeIdx - this.fieldHistoryResults.length];
           }
-          if (result) { this.addToQuery(result); }
+          if (result) {
+            // need to decrement counter if the user used arrow keys to select
+            // result because this increments the counter by 1
+            this.caretPos--;
+            this.addToQuery(result);
+          }
         }
         break;
       }
@@ -487,8 +495,7 @@ export default {
 
       // if the cursor is at a space
       const spaceCP = (this.caretPos > 0 &&
-        this.caretPos === this.expression.length &&
-        this.expression[this.caretPos - 1] === ' ');
+        this.expression[this.caretPos] === ' ');
 
       let end = this.caretPos;
       const endLen = this.expression.length;
@@ -504,7 +511,7 @@ export default {
       // add the space to the tokens
       if (spaceCP) { tokens.push(' '); }
 
-      const lastToken = tokens[tokens.length - 1];
+      let lastToken = tokens[tokens.length - 1];
 
       // display fields
       if (tokens.length <= 1) {
@@ -565,28 +572,14 @@ export default {
         this.results = this.findMatch(lastToken, views);
       }
 
-      // autocomplete variables
-      if (/^(\$)/.test(lastToken)) {
-        this.loadingValues = true;
-        let url = 'api/shortcuts?fieldFormat=true&map=true';
-        if (field && field.type) {
-          url += `&fieldType=${field.type}`;
-        }
-        this.$http.get(url)
-          .then((response) => {
-            this.loadingValues = false;
-            const escapedToken = lastToken.replace('$', '\\$');
-            this.results = this.findMatch(escapedToken, response.data);
-          }, (error) => {
-            this.loadingValues = false;
-            this.loadingError = error.text || error;
-          });
-
-        return;
-      }
-
       // Don't try and autocomplete these fields
       if (field.noFacet || field.regex || field.type.match(/textfield/)) { return; }
+
+      let isValueList = false;
+      if (/^(\[)/.test(lastToken)) { // it is a list of values
+        isValueList = true;
+        lastToken = lastToken.substring(1); // remove first char '['
+      }
 
       // regular expressions start with a forward slash
       // lists start with an open square bracket
@@ -604,6 +597,45 @@ export default {
         }).catch((error) => {
           this.loadingValues = false;
           this.loadingError = error;
+        });
+
+        return;
+      }
+
+      // if the token is a list of values and there are multiple values entered
+      if (isValueList && /(,)/.test(lastToken)) {
+        // find the value from , | [ to the cursor position
+        let pos = this.caretPos;
+        const queryChars = [];
+        for (pos; pos >= 0; pos--) {
+          const char = this.expression[pos];
+          if (char === ',' || char === '[') {
+            break;
+          }
+          queryChars.push(char);
+        }
+        lastToken = queryChars.reverse().join('');
+
+        if (/(])$/.test(lastToken)) {
+          // if theres a closing brace, remove it from the token for querying
+          lastToken = lastToken.substring(0, lastToken.length - 1);
+        }
+      }
+
+      // autocomplete variables
+      if (/^(\$)/.test(lastToken)) {
+        this.loadingValues = true;
+        let url = 'api/shortcuts?fieldFormat=true&map=true';
+        if (field && field.type) {
+          url += `&fieldType=${field.type}`;
+        }
+        this.$http.get(url).then((response) => {
+          this.loadingValues = false;
+          const escapedToken = lastToken.replace('$', '\\$');
+          this.results = this.findMatch(escapedToken, response.data);
+        }).catch((error) => {
+          this.loadingValues = false;
+          this.loadingError = error.text || error;
         });
 
         return;
@@ -634,21 +666,19 @@ export default {
 
         this.cancellablePromise = FieldService.getValues(params);
 
-        this.cancellablePromise.promise
-          .then((result) => {
-            this.cancellablePromise = null;
-            if (result) {
-              this.loadingValues = false;
-              this.loadingError = '';
-              this.results = result;
-              this.addExistsItem(lastToken, operatorToken);
-            }
-          })
-          .catch((error) => {
-            this.cancellablePromise = null;
+        this.cancellablePromise.promise.then((result) => {
+          this.cancellablePromise = null;
+          if (result) {
             this.loadingValues = false;
-            this.loadingError = error.message || error;
-          });
+            this.loadingError = '';
+            this.results = result;
+            this.addExistsItem(lastToken, operatorToken);
+          }
+        }).catch((error) => {
+          this.cancellablePromise = null;
+          this.loadingValues = false;
+          this.loadingError = error.message || error;
+        });
       }
     },
     /**
@@ -720,13 +750,66 @@ export default {
      */
     rebuildQuery: function (q, str) {
       let result = '';
-      const lastToken = tokens[tokens.length - 1];
+      let lastToken = tokens[tokens.length - 1];
       const allTokens = this.splitExpression(q);
+      let replacingToken = lastToken;
 
       if (lastToken === ' ') {
+        replacingToken = null; // we're not replacing just adding to the end
         result = q += str + ' ';
       } else { // replace the last token and rebuild query
         let t, i;
+
+        const isArray = /^(\[)/.test(lastToken);
+        if (isArray) { // it's an array of values
+          let pos = this.caretPos;
+
+          // if were not at the end of the list or we're not right before a comma
+          // we need to add a comma after the cursor position so that the list of
+          // values can be split into tokens and the appropriate token replaced
+          if (this.expression[pos + 1] !== ',' && this.expression[pos + 1] !== ']') {
+            const subExpr = tokens.join(' ');
+            const tokenCaretPos = this.caretPos - (subExpr.length - lastToken.length);
+            if (tokenCaretPos !== lastToken.length - 1) { // add the comma if we're not at the end
+              lastToken = lastToken.slice(0, tokenCaretPos + 1) + ',' + lastToken.slice(tokenCaretPos + 1);
+            }
+          }
+
+          // remove surrounding brackets so the search works
+          let hasEndBracket = false;
+          if (/(])$/.test(lastToken)) { // remove last char if it's ']'
+            hasEndBracket = true;
+            lastToken = lastToken.substring(0, lastToken.length - 1);
+          }
+          const split = lastToken.split(',');
+          split[0] = split[0].substring(1); // remove first char (always '[')
+
+          // find the token we're trying to replace by finding the value from
+          // , or [ to the cursor position by traversing back from the cursor pos
+          const queryChars = [];
+          for (pos; pos >= 0; pos--) {
+            const char = this.expression[pos];
+            if (char === ',' || char === '[') {
+              break;
+            }
+            queryChars.push(char);
+          }
+
+          // the token we're looking to replace has been found but is backwards
+          replacingToken = queryChars.reverse().join('');
+
+          // find the token to replace in the list of values
+          for (i = 0; i < split.length; ++i) {
+            if (split[i] === replacingToken) {
+              split[i] = str; // replace it with the autocomplete string
+              break;
+            }
+          }
+
+          str = `[${split.join(',')}`; // join back the values with a ,
+          if (hasEndBracket) { str += ']'; } // add the ']' back
+        }
+
         tokens[tokens.length - 1] = str;
 
         for (i = 0; i < tokens.length; ++i) {
@@ -736,7 +819,7 @@ export default {
         }
 
         if (allTokens.length > tokens.length) {
-          // add the rest of the tokens
+          // add the rest of the tokens (after the autocomplete result was added)
           for (i; i < allTokens.length; ++i) {
             t = allTokens[i];
             if (t === ' ') { break; }
@@ -745,7 +828,7 @@ export default {
         }
       }
 
-      return result;
+      return { expression: result, replacing: replacingToken };
     },
     /**
      * Splits a string into tokens
